# openml

./: .gitignore  CMakeLists.txt  OpenML.sln  README.md  build-all.bat  build.sh
OpenML.Android/: OpenML.Android.vcxproj
OpenML.Shared/: AABB.cpp  AABB.h  AlgorithmAitken.cpp  AlgorithmAitken.h  AlgorithmBisection.cpp  AlgorithmBisection.h  AlgorithmFalsePosition.cpp  AlgorithmFalsePosition.h  AlgorithmFixedPoint.cpp  AlgorithmFixedPoint.h  AlgorithmHorner.cpp  AlgorithmHorner.h  AlgorithmInterpolation.cpp  AlgorithmInterpolation.h  AlgorithmLagrange.cpp  AlgorithmLagrange.h  AlgorithmNewton.cpp  AlgorithmNewton.h  AlgorithmSecant.cpp  AlgorithmSecant.h  AlgorithmSorting.cpp  AlgorithmSorting.h  AlgorithmSteffensen.cpp  AlgorithmSteffensen.h  BinaryTree.cpp  BinaryTree.h  BinaryTreeNode.cpp  BinaryTreeNode.h  BisectionAlgorithm.cpp  BisectionAlgorithm.h  BoundingVolume.cpp  BoundingVolume.h  BoundingVolumeHierarchy.cpp  BoundingVolumeHierarchy.h  Circle2D.cpp  Circle2D.h  Colision2DStatus.h  ColisionStatus.h  CollisionDetection.cpp  CollisionDetection.h  (+76 more)
OpenML.Test/: AABBTest.cpp  AlgorithmAitkenTest.cpp  AlgorithmBisectionTest.cpp  AlgorithmFalsePositionTest.cpp  AlgorithmFixedPointTest.cpp  AlgorithmHornerTest.cpp  AlgorithmInterpolationTest.cpp  AlgorithmLagrangecpp.cpp  AlgorithmNewtonTest.cpp  AlgorithmSecantTest.cpp  AlgorithmSortingTest.cpp  AlgorithmSteffensenTest.cpp  Asserts.h  BinaryTreeNodeTest.cpp  BinaryTreeTest.cpp  BisectionAlgorithmTest.cpp  BoundingVolumeHierarchyTest.cpp  Circle2DTest.cpp  CollisionDetectionTest.cpp  CollisionResponseTest.cpp  DOP18Test.cpp  GpuCommandTest.cpp  GpuCommandsTest.cpp  GpuContextTest.cpp  GpuInsertionSortingTest.cpp  GpuRadixSortingTest.cpp  HashGridTest.cpp  Line2DTest.cpp  Line3DTest.cpp  (+26 more)
(+10 files in other folders)
